welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:32: error: not found: value ecrisMessage
  ecrisMessage(nb)
  ^